--- a/Frontend/codex-frontend/styles/Home.module.css
+++ b/Frontend/codex-frontend/styles/Home.module.css
@@ -156,6 +156,24 @@
   gap: 20px;
 }
 
+.chatbox{
+  /* display: none; */
+  position: fixed;
+  bottom: 20px;
+  right: 10px;
+  
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #007db8;
+  color: white;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+
 @media only screen and (max-width: 415px) and (min-width:280px)  {
   .loginbutton{
   display: flex;
