--- a/Frontend/codex-frontend/styles/globals.css
+++ b/Frontend/codex-frontend/styles/globals.css
@@ -4,6 +4,9 @@
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 }
+main{
+  /* position: relative; */
+}
 ::-webkit-scrollbar{
   width: 10px;
  
