--- a/Frontend/codex-frontend/styles/Home.module.css
+++ b/Frontend/codex-frontend/styles/Home.module.css
@@ -8,12 +8,15 @@
 }
 .navbar{
   display: flex;
-  width: 95%;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   margin-top: 10px;
   justify-content: space-between;
   margin-bottom: 40px;
+  align-items: center;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  padding: 0 2vh;
 }
 .navbarimage{
   /* margin-left: 50px; */
