--- a/Frontend/codex-frontend/styles/globals.css
+++ b/Frontend/codex-frontend/styles/globals.css
@@ -19,3 +19,6 @@ main{
   background: linear-gradient(180deg, rgb(199,81,192) 40%,  #007db8 89%);
   border-radius: 8px;
 }
+body,html{
+  padding: 0; margin: 0; width: 100%;height: 100%;overflow-x: hidden;
+}
